Open new panes in current directory + restore panes and vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # split panes with | and _
-bind | split-window -h
-bind _ split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind _ split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
@@ -24,6 +24,12 @@ set -g default-terminal "screen-256color"
 # list of installed plugins
 set -g @plugin 'tmux-plugins/tpm' # plugin-manager
 set -g @plugin 'tmux-plugins/tmux-resurrect' # restart sessions
+
+# restore vim session
+set -g @resurrect-strategy-vim 'session'
+
+# restore panes
+set -g @resurrect-capture-pane-contents 'on'
 
 # start Plugin Manger
 run '~/.tmux/plugins/tpm/tpm'
