Update: change ~ to /home/eteichma for stability

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,4 +32,4 @@ set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
 # start Plugin Manger
-run '~/.tmux/plugins/tpm/tpm'
+run '$HOME/.tmux/plugins/tpm/tpm'
