--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,9 @@ bind _ split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
 # switch panes with Alt+vim-keys
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
