--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,6 @@ unbind %
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
-
 # switch panes with Alt+vim-keys
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
@@ -33,6 +32,36 @@ set -g @resurrect-strategy-vim 'session'
 
 # restore panes
 set -g @resurrect-capture-pane-contents 'on'
+
+#### COLOUR (Solarized dark)
+
+# default statusbar colors
+set-option -g status-style fg=yellow,bg=black #yellow and base02
+
+# default window title colors
+set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+#set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
+#set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=black #base02
+set-option -g pane-active-border-style fg=brightgreen #base01
+
+# message text
+set-option -g message-style fg=brightred,bg=black #orange and base01
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
 # start Plugin Manger
 run '$HOME/.tmux/plugins/tpm/tpm'
