--- a/tmux.conf
+++ b/tmux.conf
@@ -33,13 +33,13 @@ set -g @resurrect-strategy-vim 'session'
 # restore panes
 set -g @resurrect-capture-pane-contents 'on'
 
-#### COLOUR (Solarized dark)
+#### COLOUR (Solarized light)
 
 # default statusbar colors
-set-option -g status-style fg=yellow,bg=black #yellow and base02
+set-option -g status-style fg=yellow,bg=white #yellow and base2
 
 # default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
+set-window-option -g window-status-style fg=brightyellow,bg=default #base0 and default
 #set-window-option -g window-status-style dim
 
 # active window title colors
@@ -47,11 +47,11 @@ set-window-option -g window-status-current-style fg=brightred,bg=default #orange
 #set-window-option -g window-status-current-style bright
 
 # pane border
-set-option -g pane-border-style fg=black #base02
-set-option -g pane-active-border-style fg=brightgreen #base01
+set-option -g pane-border-style fg=white #base2
+set-option -g pane-active-border-style fg=brightcyan #base1
 
 # message text
-set-option -g message-style fg=brightred,bg=black #orange and base01
+set-option -g message-style fg=brightred,bg=white #orange and base2
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
@@ -61,7 +61,7 @@ set-option -g display-panes-colour brightred #orange
 set-window-option -g clock-mode-colour green #green
 
 # bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+set-window-option -g window-status-bell-style fg=white,bg=red #base2, red
 
 # start Plugin Manger
 run '$HOME/.tmux/plugins/tpm/tpm'
