--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,7 @@ set -g mouse on
 
 # activate colors
 set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # list of installed plugins
 set -g @plugin 'tmux-plugins/tpm' # plugin-manager
