--- a/tmux.conf
+++ b/tmux.conf
@@ -34,6 +34,8 @@ set -g @resurrect-strategy-vim 'session'
 # restore panes
 set -g @resurrect-capture-pane-contents 'on'
 
+set -s escape-time 0
+
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
