--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,13 @@ set -g @resurrect-capture-pane-contents 'on'
 
 set -s escape-time 0
 
+# forget the find window.  That is for chumps
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+
+bind-key -r z run-shell "~/.local/bin/tmux-sessionizer ~/code/tc/qsav"
+bind-key -r x run-shell "~/.local/bin/tmux-sessionizer ~/code/tc/upa-tool"
+bind-key -r c run-shell "~/.local/bin/tmux-sessionizer ~/code/personal/coding_exercises"
+
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
