--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,13 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # list of installed plugins
 set -g @plugin 'tmux-plugins/tpm' # plugin-manager
-set -g @plugin 'tmux-plugins/tmux-resurrect' # restart sessions
+# set -g @plugin 'tmux-plugins/tmux-resurrect' # restart sessions
+set -g @plugin 'catppuccin/tmux'
+
+set -g @catppuccin_flavour 'macchiato'
+set -g @catppuccin_status_modules_right "application date_time"
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
 
 # restore vim session
 set -g @resurrect-strategy-vim 'session'
@@ -39,9 +45,9 @@ set -s escape-time 0
 # forget the find window.  That is for chumps
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-bind-key -r z run-shell "~/.local/bin/tmux-sessionizer ~/code/tc/qsav"
-bind-key -r x run-shell "~/.local/bin/tmux-sessionizer ~/code/tc/upa-tool"
-bind-key -r c run-shell "~/.local/bin/tmux-sessionizer ~/code/personal/coding_exercises"
+bind-key -r r run-shell "~/.local/bin/tmux-sessionizer ~/code/tc/qsav"
+bind-key -r t run-shell "~/.local/bin/tmux-sessionizer ~/code/tc/upa-tool"
+bind-key -r y run-shell "~/.local/bin/tmux-sessionizer ~/code/personal/coding_exercises"
 
 #### COLOUR (Solarized dark)
 
