Update Current State

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,9 +28,11 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g @plugin 'tmux-plugins/tpm' # plugin-manager
 # set -g @plugin 'tmux-plugins/tmux-resurrect' # restart sessions
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 set -g @catppuccin_flavour 'macchiato'
-set -g @catppuccin_status_modules_right "application date_time"
+set -g @catppuccin_status_modules_right "application cpu battery date_time"
 set -g @catppuccin_status_modules_left "session"
 set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
 
