--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,7 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 bind-key -r r run-shell "~/.local/bin/tmux-sessionizer ~/code/tc/qsav"
 bind-key -r t run-shell "~/.local/bin/tmux-sessionizer ~/code/tc/upa-tool"
 bind-key -r y run-shell "~/.local/bin/tmux-sessionizer ~/code/personal/coding_exercises"
+bind-key -r m run-shell "~/.local/bin/tmux-sessionizer ~/Documents/notes"
 
 #### COLOUR (Solarized dark)
 
